feat,style: Added product listing functionality logic and styled classes using "CSS"

--- a/web/index.html
+++ b/web/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Home | Serenitas</title>
         <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width,maximum-scale=0.8,user-scalable=0"
-        />
-            <link rel="stylesheet" href="./style.css" />
+        <meta name="viewport" content="width=device-width,maximum-scale=0.8,user-scalable=0"
+              />
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
         <header>
@@ -15,22 +15,20 @@
         </header>
         <nav>
             <a href="cadpro.html" target="centro">Cadastro de produtos</a>
-            <a href="listapro.html" target="centro">Listagem de produtos</a>
+            <a href="listapro.jsp" target="centro">Listagem de produtos</a>
             <a href="excpro.html" target="centro">Excluir produtos</a>
             <a href="altpro.html" target="centro">Alterar produtos</a>
         </nav>
-        
-        <!-- ===== main ===== -->
+
         <main>
             <iframe 
                 src="apresentacao.html" 
                 name="centro">
             </iframe>
         </main>
-        
-    <!-- ===== footer ===== -->
-    <footer>
-        <p>©2025 Alan Ryan</p>
-    </footer>
+
+        <footer>
+            <p>©2025 Alan Ryan</p>
+        </footer>
     </body>
 </html>
