feat: Implement full "CRUD" functionality with "JSP" and updated styling

--- a/web/apresentacao.html
+++ b/web/apresentacao.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Apresentação | Serenitas</title>
-        <link rel="stylesheet" href="./style.css" />
+        <title>Apresentação</title>
+        <link rel="stylesheet" href="./styles/presentation.css" />
     </head>
     <body>
         <main class="container">
