--- a/web/cadpro.html
+++ b/web/cadpro.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cadastro de Produtos | Serenitas</title>
+        <title>Cadastro de Produtos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./styles/register.css" />
     </head>
     <body>
         <form method="post" action="salvar_produtos.jsp">
             <p>
                 <label for="nome">Nome do produto:</label>
-                <input type="text" name="nome" id="nome" size="50" maxlength="50">
+                <input type="text" name="nome" id="nome" size="50" maxlength="50" placeholder="Ex: Caneta Azul" required>
             </p>
             <p>
                 <label for="marca">Marca:</label>
-                <input type="text" name="marca" id="marca" maxlength="50">
+                <input type="text" name="marca" id="marca" maxlength="50" placeholder="Ex: Bic" required>
             </p>
             <p>
-                <label for="preco">Preço:</label>
-                <input type="text" name="preco" id="preco">
+                <label for="preco">Preço (R$):</label>
+                <input type="number" id="preco" name="preco" step="0.01" min="0" required placeholder="0.00" inputmode="decimal">
+
             </p>
             <p>
                 <input type="submit" value="Salvar">
