--- a/web/index.html
+++ b/web/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
     <head>
-        <title>Home | Serenitas</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,maximum-scale=0.8,user-scalable=0"
-              />
-        <link rel="stylesheet" href="./style.css" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, maximum-scale=0.8, user-scalable=0" />
+        <title>Serenitas - Gerenciamento de Produtos</title>
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
     <body>
+
         <header>
-            <h1>
-                Serenitas
-            </h1>
+            <div class="header-container">
+                <a href="./" class="logo">Serenitas</a>
+                <p class="slogan">Organize e gerencie seus produtos com facilidade.</p>
+            </div>
         </header>
-        <nav>
-            <a href="cadpro.html" target="centro">Cadastro de produtos</a>
-            <a href="listapro.jsp" target="centro">Listagem de produtos</a>
-            <a href="excpro.html" target="centro">Excluir produtos</a>
-            <a href="altpro.html" target="centro">Alterar produtos</a>
+
+        <nav aria-label="Menu principal">
+            <a href="cadpro.html" target="centro">Cadastro de Produtos</a>
+            <a href="listapro.jsp" target="centro">Listagem de Produtos</a>
+            <a href="conpro.html" target="centro">Consultar Produtos</a>
+            <a href="csv.jsp" target="centro">Cadastrar via CSV</a>
         </nav>
 
         <main>
             <iframe 
                 src="apresentacao.html" 
-                name="centro">
+                name="centro" 
+                title="Conteúdo principal"
+                loading="lazy"
+                sandbox="allow-scripts allow-same-origin allow-popups allow-forms"
+                >
             </iframe>
         </main>
 
         <footer>
-            <p>©2025 Alan Ryan</p>
+            <p>© 2025 Alan Ryan - Todos os direitos reservados</p>
         </footer>
+
     </body>
 </html>
